--- a/mobile/app/src/main/AndroidManifest.xml
+++ b/mobile/app/src/main/AndroidManifest.xml
@@ -19,8 +19,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Artefacto001"
-        tools:targetApi="31">
-        <activity
+        tools:targetApi="31"
+        android:usesCleartextTraffic="true">
+
+    <activity
             android:name=".ui.chatbot.ChatbotActivity"
             android:exported="false"
             android:theme="@style/Theme.Artefacto001" />
